Fix article nav links jumping on hover

--- a/website/components/ArticleContent/styles.module.scss
+++ b/website/components/ArticleContent/styles.module.scss
@@ -21,6 +21,7 @@
 
     &:hover {
       font-weight: 800;
+      letter-spacing: -0.5px;
     }
   }
 
@@ -31,6 +32,7 @@
 
 .navActive {
   font-weight: 800;
+  letter-spacing: -0.5px;
 }
 
 .articleMain {
