--- a/website/components/CourseCard/styles.module.scss
+++ b/website/components/CourseCard/styles.module.scss
@@ -1,4 +1,5 @@
 @import "/styles/variables.scss";
+@import "/styles/mixins.scss";
 
 .courseCard {
   margin-bottom: 1rem;
@@ -13,9 +14,13 @@ a.banner {
   background-repeat: no-repeat;
   background-position-x: 120%;
   border-radius: 0.5rem;
-  padding: 1.5rem;
+  padding: 1.5rem 1rem;
   transition: 400ms;
   
+  @include breakpoint-md {
+    padding: 1.5rem;
+  }
+
   &:hover {
     transform: scale(1.03);
     transition: transform 400ms;
